Remove configurable parameters (#1453)
* Refactor export

* Fix entrypoint tests

* remove match statements

* Fix tests + remove get_configurable_params + fix hpo,benchmarking

* Path->str

* Update src/anomalib/models/__init__.py

Co-authored-by: Samet Akcay <samet.akcay@intel.com>

* Update src/anomalib/utils/sweep/config.py

Co-authored-by: Samet Akcay <samet.akcay@intel.com>

* Update tools/inference/README.md

Co-authored-by: Samet Akcay <samet.akcay@intel.com>

* Update tools/inference/README.md

Co-authored-by: Samet Akcay <samet.akcay@intel.com>

* str->Path

* str->Path

* Fix model checkpoint path

* typing + path + test order

* Update src/anomalib/utils/sweep/config.py

Co-authored-by: Samet Akcay <samet.akcay@intel.com>

* Mark tests as xfail

* Fix notebook

---------

Co-authored-by: Ashwin Vaidya <ashwinitinvaidya@gmail.com>
Co-authored-by: Dick Ameln <amelndjd@gmail.com>
Co-authored-by: Samet Akcay <samet.akcay@intel.com>

--- a/notebooks/000_getting_started/001_getting_started.ipynb
+++ b/notebooks/000_getting_started/001_getting_started.ipynb
@@ -85,7 +85,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -121,7 +121,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -131,13 +131,11 @@
                 "from anomalib.engine import Engine\n",
                 "from torchvision.transforms import ToPILImage\n",
                 "\n",
-                "from anomalib.config import get_configurable_parameters\n",
-                "from anomalib.data import get_datamodule\n",
+                "from anomalib.data import MVTec, TaskType\n",
                 "from anomalib.data.utils import read_image\n",
-                "from anomalib.deploy import OpenVINOInferencer\n",
-                "from anomalib.models import get_model\n",
-                "from anomalib.pre_processing.transforms import Denormalize\n",
-                "from anomalib.utils.callbacks import LoadModelCallback, get_callbacks"
+                "from anomalib.deploy import OpenVINOInferencer, ExportMode\n",
+                "from anomalib.models import Padim\n",
+                "from anomalib.pre_processing.transforms import Denormalize"
             ]
         },
         {
@@ -163,47 +161,7 @@
                 "- [R-KDE](https://ieeexplore.ieee.org/document/8999287)\n",
                 "- [STFPM](https://arxiv.org/pdf/2103.04257.pdf)\n",
                 "\n",
-                "In this tutorial, we'll be using Padim. Now, let's get their config paths from the respected folders.\n"
-            ]
-        },
-        {
-            "attachments": {},
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Configuration\n",
-                "\n",
-                "In this demonstration, we will choose [Padim](https://arxiv.org/pdf/2011.08785.pdf) model from the above list. Let's take a quick look at its config file.\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "MODEL = \"padim\"  # 'padim', 'cflow', 'stfpm', 'ganomaly', 'dfkde', 'patchcore'\n",
-                "CONFIG_PATH = root_directory / f\"src/anomalib/models/{MODEL}/config.yaml\"\n",
-                "with CONFIG_PATH.open(encoding=\"utf-8\") as file:\n",
-                "    print(file.read())"
-            ]
-        },
-        {
-            "attachments": {},
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "We could use [get_configurable_parameter](https://github.com/openvinotoolkit/anomalib/blob/main/anomalib/config/config.py#L114) function to read the configs from the path and return them in a dictionary. We use the default config file that comes with Padim implementation, which uses `./datasets/MVTec` as the path to the dataset. We need to overwrite this after loading the config.\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# pass the config file to model, callbacks and datamodule\n",
-                "config = get_configurable_parameters(config_path=CONFIG_PATH)"
+                "In this tutorial, we'll be using [Padim](https://arxiv.org/pdf/2011.08785.pdf).\n"
             ]
         },
         {
@@ -220,7 +178,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
@@ -232,7 +190,7 @@
                 }
             ],
             "source": [
-                "datamodule = get_datamodule(config)\n",
+                "datamodule = MVTec()\n",
                 "datamodule.prepare_data()  # Downloads the dataset if it's not in the specified `root` directory\n",
                 "datamodule.setup()  # Create train/val/test/prediction sets.\n",
                 "\n",
@@ -250,7 +208,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [
                 {
@@ -275,7 +233,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -304,25 +262,27 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## Prepare Model and Callbacks\n",
+                "## Prepare Model\n",
                 "\n",
-                "Now, the config file is updated as we want. We can now start model training with it. Here we will be using `datamodule`, `model` and `callbacks` to train the model. Callbacks are self-contained objects, which contains non-essential logic. This way we could inject as many callbacks as possible such as ModelLoading, Timer, Metrics, Normalization and Visualization\n",
-                "\n",
-                "In addition to the training, we would like to perform inference using OpenVINO. Therefore we will set the export configuration to openvino so that anomalib would export the trained model to the openvino format.\n"
+                "Let's create the Padim and train it."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 6,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "FeatureExtractor is deprecated. Use TimmFeatureExtractor instead. Both FeatureExtractor and TimmFeatureExtractor will be removed in a future release.\n"
+                    ]
+                }
+            ],
             "source": [
-                "# Set the export-mode to OpenVINO to create the OpenVINO IR model.\n",
-                "config.optimization.export_mode = \"openvino\"\n",
-                "\n",
-                "# Get the model and callbacks\n",
-                "model = get_model(config)\n",
-                "callbacks = get_callbacks(config)"
+                "# Get the model\n",
+                "model = Padim()"
             ]
         },
         {
@@ -332,7 +292,7 @@
             "outputs": [],
             "source": [
                 "# start training\n",
-                "engine = Engine(**config.trainer, callbacks=callbacks)\n",
+                "engine = Engine()\n",
                 "engine.fit(model=model, datamodule=datamodule)"
             ]
         },
@@ -351,9 +311,11 @@
             "outputs": [],
             "source": [
                 "# load best model from checkpoint before evaluating\n",
-                "load_model_callback = LoadModelCallback(weights_path=engine.trainer.checkpoint_callback.best_model_path)\n",
-                "engine.trainer.callbacks.insert(0, load_model_callback)\n",
-                "test_results = engine.test(model=model, datamodule=datamodule)"
+                "test_results = engine.test(\n",
+                "    model=model,\n",
+                "    datamodule=datamodule,\n",
+                "    ckpt_path=engine.trainer.checkpoint_callback.best_model_path,\n",
+                ")"
             ]
         },
         {
@@ -364,6 +326,28 @@
                 "## OpenVINO Inference\n",
                 "\n",
                 "Now that we trained and tested a model, we could check a single inference result using OpenVINO inferencer object. This will demonstrate how a trained model could be used for inference.\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Before we can use OpenVINO inference, let's export the model to OpenVINO format first."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "engine.export(\n",
+                "    model=model,\n",
+                "    export_mode=ExportMode.OPENVINO,\n",
+                "    task=TaskType.SEGMENTATION,\n",
+                "    datamodule=datamodule,\n",
+                "    input_size=(256, 256),\n",
+                ")"
             ]
         },
         {
@@ -378,7 +362,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 18,
+            "execution_count": 12,
             "metadata": {},
             "outputs": [
                 {
@@ -420,7 +404,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": 13,
             "metadata": {},
             "outputs": [
                 {
@@ -432,13 +416,13 @@
                 }
             ],
             "source": [
-                "output_path = Path(config[\"trainer\"][\"default_root_dir\"])\n",
+                "output_path = Path(engine.trainer.default_root_dir)\n",
                 "print(output_path)"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": 14,
             "metadata": {},
             "outputs": [
                 {
@@ -457,7 +441,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 15,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -480,7 +464,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 22,
+            "execution_count": 16,
             "metadata": {},
             "outputs": [
                 {
@@ -497,7 +481,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 28,
+            "execution_count": 17,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -522,7 +506,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 29,
+            "execution_count": 18,
             "metadata": {},
             "outputs": [
                 {
@@ -539,7 +523,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 30,
+            "execution_count": 19,
             "metadata": {},
             "outputs": [
                 {
@@ -570,7 +554,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 34,
+            "execution_count": 20,
             "metadata": {},
             "outputs": [
                 {
@@ -601,7 +585,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 35,
+            "execution_count": 21,
             "metadata": {},
             "outputs": [
                 {
@@ -632,7 +616,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 36,
+            "execution_count": 22,
             "metadata": {},
             "outputs": [
                 {
@@ -663,7 +647,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 37,
+            "execution_count": 23,
             "metadata": {},
             "outputs": [
                 {
@@ -717,7 +701,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.11"
+            "version": "3.10.13"
         },
         "orig_nbformat": 4,
         "vscode": {
