Reorg Part I: Data (#1483)
* Update Anomalib data with the new structure

* Update dataset imports and remove unused imports

* ruff format in engine.py

* Move TaskType to utils/types

* Revert TaskType import from anomalib

* Revert tox.ini

* Refactor imports and fix import errors

* Fix import errors and update type annotations

* Fix imports in jupyter notebooks

* Refactor import statements in test_visualizer.py

--- a/notebooks/000_getting_started/001_getting_started.ipynb
+++ b/notebooks/000_getting_started/001_getting_started.ipynb
@@ -131,10 +131,11 @@
                 "from anomalib.engine import Engine\n",
                 "from torchvision.transforms import ToPILImage\n",
                 "\n",
-                "from anomalib.data import MVTec, TaskType\n",
+                "from anomalib.data import MVTec\n",
                 "from anomalib.data.utils import read_image\n",
                 "from anomalib.deploy import OpenVINOInferencer, ExportMode\n",
                 "from anomalib.models import Padim\n",
+                "from anomalib.utils.types import TaskType\n",
                 "from anomalib.pre_processing.transforms import Denormalize"
             ]
         },
