--- a/notebooks/100_datamodules/101_btech.ipynb
+++ b/notebooks/100_datamodules/101_btech.ipynb
@@ -70,9 +70,9 @@
     "from PIL import Image\n",
     "from torchvision.transforms import ToPILImage\n",
     "\n",
-    "from anomalib.data import TaskType\n",
-    "from anomalib.data.btech import BTech, BTechDataset\n",
-    "from anomalib.data.utils import InputNormalizationMethod, get_transforms"
+    "from anomalib.data.image.btech import BTech, BTechDataset\n",
+    "from anomalib.data.utils import InputNormalizationMethod, get_transforms\n",
+    "from anomalib.utils.types import TaskType"
    ]
   },
   {
