--- a/notebooks/100_datamodules/102_mvtec.ipynb
+++ b/notebooks/100_datamodules/102_mvtec.ipynb
@@ -31,7 +31,7 @@
     "from PIL import Image\n",
     "from torchvision.transforms import ToPILImage\n",
     "\n",
-    "from anomalib.data.mvtec import MVTec, MVTecDataset\n",
+    "from anomalib.data.image.mvtec import MVTec, MVTecDataset\n",
     "from anomalib.data.utils import InputNormalizationMethod, get_transforms"
    ]
   },
