--- a/notebooks/100_datamodules/103_folder.ipynb
+++ b/notebooks/100_datamodules/103_folder.ipynb
@@ -72,8 +72,8 @@
     "from PIL import Image\n",
     "from torchvision.transforms import ToPILImage\n",
     "\n",
-    "from anomalib.data import TaskType\n",
-    "from anomalib.data.folder import Folder, FolderDataset\n",
+    "from anomalib.utils.types import TaskType\n",
+    "from anomalib.data.image.folder import Folder, FolderDataset\n",
     "from anomalib.data.utils import InputNormalizationMethod, get_transforms"
    ]
   },
