--- a/notebooks/200_models/201_fastflow.ipynb
+++ b/notebooks/200_models/201_fastflow.ipynb
@@ -80,13 +80,14 @@
                 "from torch.optim.adam import Adam\n",
                 "from torch.utils.data import DataLoader\n",
                 "\n",
-                "from anomalib.data import InferenceDataset, TaskType\n",
-                "from anomalib.data.mvtec import MVTec\n",
+                "from anomalib.data import InferenceDataset\n",
+                "from anomalib.data import MVTec\n",
                 "from anomalib.models.fastflow.lightning_model import Fastflow\n",
                 "from anomalib.post_processing import (\n",
                 "    superimpose_anomaly_map,\n",
                 ")\n",
-                "from anomalib.pre_processing.transforms import Denormalize"
+                "from anomalib.pre_processing.transforms import Denormalize\n",
+                "from anomalib.utils.types import TaskType"
             ]
         },
         {
