Reorg Part II: Remove `pre_processor` and `post_processor` subpackages (#1485)
* Update Anomalib data with the new structure

* Update dataset imports and remove unused imports

* ruff format in engine.py

* Move TaskType to utils/types

* Revert TaskType import from anomalib

* Revert tox.ini

* Refactor imports and fix import errors

* Fix import errors and update type annotations

* Fix imports in jupyter notebooks

* Remove pre-processor subpackage from anomalib

* Remove unused imports and update import paths

* Refactor import statements in test_visualizer.py

* Remove unused code and deprecate Denormalize and
ToNumpy classes

* Remove empty code cell

* Add a description why input image is read from path

* Fix bug in superimpose

--- a/notebooks/100_datamodules/104_tiling.ipynb
+++ b/notebooks/100_datamodules/104_tiling.ipynb
@@ -70,7 +70,7 @@
     "from torchvision.transforms import Resize, ToPILImage\n",
     "from torchvision.utils import draw_segmentation_masks, make_grid\n",
     "\n",
-    "from anomalib.pre_processing.tiler import Tiler"
+    "from anomalib.data.utils.tiler import Tiler"
    ]
   },
   {
