--- a/notebooks/000_getting_started/001_getting_started.ipynb
+++ b/notebooks/000_getting_started/001_getting_started.ipynb
@@ -275,7 +275,7 @@
             "outputs": [],
             "source": [
                 "# start training\n",
-                "engine = Engine()\n",
+                "engine = Engine(task=TaskType.SEGMENTATION)\n",
                 "engine.fit(model=model, datamodule=datamodule)"
             ]
         },
@@ -327,7 +327,6 @@
                 "engine.export(\n",
                 "    model=model,\n",
                 "    export_mode=ExportMode.OPENVINO,\n",
-                "    task=TaskType.SEGMENTATION,\n",
                 "    datamodule=datamodule,\n",
                 "    input_size=(256, 256),\n",
                 ")"
@@ -526,7 +525,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.11.6"
+            "version": "3.10.13"
         },
         "orig_nbformat": 4,
         "vscode": {
